DiscoScript.Engine/Parser/Lexer/TParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from TParser.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace DiscoScript.Engine.Parser.Lexer {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class TParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		OpenBracket=1, CloseBracket=2, OpenParen=3, CloseParen=4, OpenBrace=5, 
		CloseBrace=6, SemiColon=7, Comma=8, Assign=9, QuestionMark=10, Colon=11, 
		Ellipsis=12, Dot=13, PlusPlus=14, MinusMinus=15, Plus=16, Minus=17, BitNot=18, 
		Not=19, Multiply=20, Divide=21, Modulus=22, Power=23, NullCoalesce=24, 
		UndefinedCoalesce=25, Hashtag=26, RightShiftArithmetic=27, LeftShiftArithmetic=28, 
		RightShiftLogical=29, LessThan=30, MoreThan=31, LessThanEquals=32, GreaterThanEquals=33, 
		Equals=34, NotEquals=35, IdentityEquals=36, IdentityNotEquals=37, BitAnd=38, 
		BitXOr=39, BitOr=40, And=41, Or=42, MultiplyAssign=43, DivideAssign=44, 
		ModulusAssign=45, PlusAssign=46, MinusAssign=47, LeftShiftArithmeticAssign=48, 
		RightShiftArithmeticAssign=49, RightShiftLogicalAssign=50, BitAndAssign=51, 
		BitXorAssign=52, BitOrAssign=53, PowerAssign=54, ARROW=55, LeftArrow=56, 
		RightArrow=57, NullLiteral=58, BooleanLiteral=59, DecimalLiteral=60, HexIntegerLiteral=61, 
		OctalIntegerLiteral=62, OctalIntegerLiteral2=63, BinaryIntegerLiteral=64, 
		BigHexIntegerLiteral=65, BigOctalIntegerLiteral=66, BigBinaryIntegerLiteral=67, 
		BigDecimalIntegerLiteral=68, Break=69, New=70, Var=71, Continue=72, While=73, 
		Function=74, Class=75, Import=76, Return=77, NaN=78, For=79, In=80, If=81, 
		Else=82, TemplateStringLiteral=83, WhiteSpaces=84, LineTerminator=85, 
		Identifier=86, StringLiteral=87;
	public const int
		RULE_main = 0, RULE_statements = 1, RULE_statement = 2, RULE_expression = 3, 
		RULE_forILoop = 4, RULE_forEachLoop = 5, RULE_forLoopStart = 6, RULE_ifStatement = 7, 
		RULE_elseStatement = 8, RULE_varDeclaration = 9, RULE_functionDeclaration = 10, 
		RULE_returnStatement = 11, RULE_identifiers = 12, RULE_commaExpressions = 13, 
		RULE_codeBlock = 14, RULE_objectMember = 15, RULE_functionCallable = 16, 
		RULE_assignment = 17, RULE_functionCall = 18;
	public static readonly string[] ruleNames = {
		"main", "statements", "statement", "expression", "forILoop", "forEachLoop", 
		"forLoopStart", "ifStatement", "elseStatement", "varDeclaration", "functionDeclaration", 
		"returnStatement", "identifiers", "commaExpressions", "codeBlock", "objectMember", 
		"functionCallable", "assignment", "functionCall"
	};

	private static readonly string[] _LiteralNames = {
		null, "'['", "']'", "'('", "')'", "'{'", "'}'", "';'", "','", "'='", "'?'", 
		"':'", "'...'", "'.'", "'++'", "'--'", "'+'", "'-'", "'~'", "'!'", "'*'", 
		"'/'", "'%'", "'**'", "'??'", "'???'", "'#'", "'>>'", "'<<'", "'>>>'", 
		"'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'==='", "'!=='", "'&'", 
		"'^'", "'|'", "'&&'", "'||'", "'*='", "'/='", "'%='", "'+='", "'-='", 
		"'<<='", "'>>='", "'>>>='", "'&='", "'^='", "'|='", "'**='", "'=>'", "'<-'", 
		"'->'", "'nulo'", null, null, null, null, null, null, null, null, null, 
		null, "'romper'", "'nuevo'", "'var'", "'continuar'", "'mientras'", "'funcion'", 
		"'clase'", "'importar'", "'devolver'", "'NaN'", "'por_cada'", "'en'", 
		"'si'", "'si_no'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "OpenBracket", "CloseBracket", "OpenParen", "CloseParen", "OpenBrace", 
		"CloseBrace", "SemiColon", "Comma", "Assign", "QuestionMark", "Colon", 
		"Ellipsis", "Dot", "PlusPlus", "MinusMinus", "Plus", "Minus", "BitNot", 
		"Not", "Multiply", "Divide", "Modulus", "Power", "NullCoalesce", "UndefinedCoalesce", 
		"Hashtag", "RightShiftArithmetic", "LeftShiftArithmetic", "RightShiftLogical", 
		"LessThan", "MoreThan", "LessThanEquals", "GreaterThanEquals", "Equals", 
		"NotEquals", "IdentityEquals", "IdentityNotEquals", "BitAnd", "BitXOr", 
		"BitOr", "And", "Or", "MultiplyAssign", "DivideAssign", "ModulusAssign", 
		"PlusAssign", "MinusAssign", "LeftShiftArithmeticAssign", "RightShiftArithmeticAssign", 
		"RightShiftLogicalAssign", "BitAndAssign", "BitXorAssign", "BitOrAssign", 
		"PowerAssign", "ARROW", "LeftArrow", "RightArrow", "NullLiteral", "BooleanLiteral", 
		"DecimalLiteral", "HexIntegerLiteral", "OctalIntegerLiteral", "OctalIntegerLiteral2", 
		"BinaryIntegerLiteral", "BigHexIntegerLiteral", "BigOctalIntegerLiteral", 
		"BigBinaryIntegerLiteral", "BigDecimalIntegerLiteral", "Break", "New", 
		"Var", "Continue", "While", "Function", "Class", "Import", "Return", "NaN", 
		"For", "In", "If", "Else", "TemplateStringLiteral", "WhiteSpaces", "LineTerminator", 
		"Identifier", "StringLiteral"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "TParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static TParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public TParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public TParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class MainContext : ParserRuleContext {
		public StatementsContext statements() {
			return GetRuleContext<StatementsContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(TParser.Eof, 0); }
		public MainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_main; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.EnterMain(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.ExitMain(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITParserVisitor<TResult> typedVisitor = visitor as ITParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMain(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainContext main() {
		MainContext _localctx = new MainContext(Context, State);
		EnterRule(_localctx, 0, RULE_main);
		try {
			State = 40;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 38; statements();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 39; Match(Eof);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementsContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ITerminalNode[] SemiColon() { return GetTokens(TParser.SemiColon); }
		public ITerminalNode SemiColon(int i) {
			return GetToken(TParser.SemiColon, i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statements; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.EnterStatements(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.ExitStatements(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITParserVisitor<TResult> typedVisitor = visitor as ITParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatements(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementsContext statements() {
		StatementsContext _localctx = new StatementsContext(Context, State);
		EnterRule(_localctx, 2, RULE_statements);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OpenBracket) | (1L << OpenParen) | (1L << OpenBrace) | (1L << LeftArrow) | (1L << RightArrow) | (1L << NullLiteral) | (1L << BooleanLiteral) | (1L << DecimalLiteral))) != 0) || ((((_la - 71)) & ~0x3f) == 0 && ((1L << (_la - 71)) & ((1L << (Var - 71)) | (1L << (Function - 71)) | (1L << (Import - 71)) | (1L << (Return - 71)) | (1L << (NaN - 71)) | (1L << (For - 71)) | (1L << (If - 71)) | (1L << (Identifier - 71)) | (1L << (StringLiteral - 71)))) != 0)) {
				{
				{
				State = 42; statement();
				State = 44;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==SemiColon) {
					{
					State = 43; Match(SemiColon);
					}
				}

				}
				}
				State = 50;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public VarDeclarationContext varDeclaration() {
			return GetRuleContext<VarDeclarationContext>(0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return GetRuleContext<FunctionDeclarationContext>(0);
		}
		public ReturnStatementContext returnStatement() {
			return GetRuleContext<ReturnStatementContext>(0);
		}
		public ForILoopContext forILoop() {
			return GetRuleContext<ForILoopContext>(0);
		}
		public ForEachLoopContext forEachLoop() {
			return GetRuleContext<ForEachLoopContext>(0);
		}
		public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITParserVisitor<TResult> typedVisitor = visitor as ITParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			State = 58;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 51; varDeclaration();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 52; functionDeclaration();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 53; returnStatement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 54; forILoop();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 55; forEachLoop();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 56; ifStatement();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 57; expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	 
		public ExpressionContext() { }
		public virtual void CopyFrom(ExpressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ArrayDeclarationContext : ExpressionContext {
		public ITerminalNode OpenBracket() { return GetToken(TParser.OpenBracket, 0); }
		public ITerminalNode CloseBracket() { return GetToken(TParser.CloseBracket, 0); }
		public CommaExpressionsContext commaExpressions() {
			return GetRuleContext<CommaExpressionsContext>(0);
		}
		public ArrayDeclarationContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.EnterArrayDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.ExitArrayDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITParserVisitor<TResult> typedVisitor = visitor as ITParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArrayDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DecrementContext : ExpressionContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode MinusMinus() { return GetToken(TParser.MinusMinus, 0); }
		public DecrementContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.EnterDecrement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.ExitDecrement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITParserVisitor<TResult> typedVisitor = visitor as ITParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDecrement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BinaryOperationContext : ExpressionContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode Multiply() { return GetToken(TParser.Multiply, 0); }
		public ITerminalNode Divide() { return GetToken(TParser.Divide, 0); }
		public ITerminalNode Modulus() { return GetToken(TParser.Modulus, 0); }
		public ITerminalNode Plus() { return GetToken(TParser.Plus, 0); }
		public ITerminalNode Minus() { return GetToken(TParser.Minus, 0); }
		public ITerminalNode LessThan() { return GetToken(TParser.LessThan, 0); }
		public ITerminalNode MoreThan() { return GetToken(TParser.MoreThan, 0); }
		public ITerminalNode LessThanEquals() { return GetToken(TParser.LessThanEquals, 0); }
		public ITerminalNode GreaterThanEquals() { return GetToken(TParser.GreaterThanEquals, 0); }
		public ITerminalNode Equals() { return GetToken(TParser.Equals, 0); }
		public ITerminalNode NotEquals() { return GetToken(TParser.NotEquals, 0); }
		public ITerminalNode And() { return GetToken(TParser.And, 0); }
		public ITerminalNode Or() { return GetToken(TParser.Or, 0); }
		public BinaryOperationContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.EnterBinaryOperation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.ExitBinaryOperation(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITParserVisitor<TResult> typedVisitor = visitor as ITParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinaryOperation(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IndexAccessContext : ExpressionContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode OpenBracket() { return GetToken(TParser.OpenBracket, 0); }
		public ITerminalNode CloseBracket() { return GetToken(TParser.CloseBracket, 0); }
		public IndexAccessContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.EnterIndexAccess(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.ExitIndexAccess(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITParserVisitor<TResult> typedVisitor = visitor as ITParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIndexAccess(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ArrowFunctionContext : ExpressionContext {
		public ITerminalNode OpenParen() { return GetToken(TParser.OpenParen, 0); }
		public ITerminalNode CloseParen() { return GetToken(TParser.CloseParen, 0); }
		public ITerminalNode ARROW() { return GetToken(TParser.ARROW, 0); }
		public CodeBlockContext codeBlock() {
			return GetRuleContext<CodeBlockContext>(0);
		}
		public IdentifiersContext identifiers() {
			return GetRuleContext<IdentifiersContext>(0);
		}
		public ArrowFunctionContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.EnterArrowFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.ExitArrowFunction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITParserVisitor<TResult> typedVisitor = visitor as ITParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArrowFunction(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UndefinedCoalesceContext : ExpressionContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode UndefinedCoalesce() { return GetToken(TParser.UndefinedCoalesce, 0); }
		public UndefinedCoalesceContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.EnterUndefinedCoalesce(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.ExitUndefinedCoalesce(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITParserVisitor<TResult> typedVisitor = visitor as ITParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUndefinedCoalesce(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IndexAssignmentContext : ExpressionContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode OpenBracket() { return GetToken(TParser.OpenBracket, 0); }
		public ITerminalNode CloseBracket() { return GetToken(TParser.CloseBracket, 0); }
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public IndexAssignmentContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.EnterIndexAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.ExitIndexAssignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITParserVisitor<TResult> typedVisitor = visitor as ITParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIndexAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AsyncCallFunctionContext : ExpressionContext {
		public ITerminalNode LeftArrow() { return GetToken(TParser.LeftArrow, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode OpenParen() { return GetToken(TParser.OpenParen, 0); }
		public ITerminalNode CloseParen() { return GetToken(TParser.CloseParen, 0); }
		public CommaExpressionsContext commaExpressions() {
			return GetRuleContext<CommaExpressionsContext>(0);
		}
		public AsyncCallFunctionContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.EnterAsyncCallFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.ExitAsyncCallFunction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITParserVisitor<TResult> typedVisitor = visitor as ITParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAsyncCallFunction(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IdentifierContext : ExpressionContext {
		public ITerminalNode Identifier() { return GetToken(TParser.Identifier, 0); }
		public IdentifierContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.EnterIdentifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.ExitIdentifier(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITParserVisitor<TResult> typedVisitor = visitor as ITParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifier(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ObjectDeclarationContext : ExpressionContext {
		public ITerminalNode OpenBrace() { return GetToken(TParser.OpenBrace, 0); }
		public ITerminalNode CloseBrace() { return GetToken(TParser.CloseBrace, 0); }
		public ObjectMemberContext[] objectMember() {
			return GetRuleContexts<ObjectMemberContext>();
		}
		public ObjectMemberContext objectMember(int i) {
			return GetRuleContext<ObjectMemberContext>(i);
		}
		public ITerminalNode[] Comma() { return GetTokens(TParser.Comma); }
		public ITerminalNode Comma(int i) {
			return GetToken(TParser.Comma, i);
		}
		public ObjectDeclarationContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.EnterObjectDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.ExitObjectDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITParserVisitor<TResult> typedVisitor = visitor as ITParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitObjectDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignmentExpressionContext : ExpressionContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public AssignmentExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.EnterAssignmentExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.ExitAssignmentExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITParserVisitor<TResult> typedVisitor = visitor as ITParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignmentExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LiteralContext : ExpressionContext {
		public ITerminalNode NullLiteral() { return GetToken(TParser.NullLiteral, 0); }
		public ITerminalNode BooleanLiteral() { return GetToken(TParser.BooleanLiteral, 0); }
		public ITerminalNode DecimalLiteral() { return GetToken(TParser.DecimalLiteral, 0); }
		public ITerminalNode StringLiteral() { return GetToken(TParser.StringLiteral, 0); }
		public ITerminalNode NaN() { return GetToken(TParser.NaN, 0); }
		public LiteralContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.EnterLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.ExitLiteral(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITParserVisitor<TResult> typedVisitor = visitor as ITParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLiteral(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IncrementContext : ExpressionContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode PlusPlus() { return GetToken(TParser.PlusPlus, 0); }
		public IncrementContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.EnterIncrement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITParserListener typedListener = listener as ITParserListener;
			if (typedListener != null) typedListener.ExitIncrement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITParserVisitor<TResult> typedVisitor = visitor as ITParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIncrement(this);
			else return visitor.VisitChildren(this);
		}
	}
